[package]
name = "muskrat"
version = "0.1.0"
authors = ["osmarks <osmarks@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
taglib = "1"
serde_derive = "1"
serde = "1"
warp = "0.1.20"
rand = "0.7"